--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webgl</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="InitDemo()">
-    <canvas id="game_surface">
+    <canvas id="game_surface" width="100%" height="100%">
         your browser does not support html5
     </canvas>
     <br>
